traefik/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"

spec:
  type: ClusterIP
  ports:
    - targetPort: metrics
      name: metrics
      port: 9100
  selector:
    app: traefik
