traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  annotations:
    svccontroller.k3s.cattle.io/tolerations: |
      - key: monitor-node
        operator: Equal
        value: "true"
        effect: NoSchedule

spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: PreferDualStack
  ports:
    - targetPort: web
      name: web
      protocol: TCP
      port: 80
    - targetPort: web-secure
      name: web-secure
      protocol: TCP
      port: 443
    - targetPort: web-secure-udp
      name: web-secure-udp
      protocol: UDP
      port: 443
  selector:
    app: traefik
