traefik/catch-all-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: catch-all

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      # 1. Normal request goes to "custom-errors" service
      # 2. "custom-errors" service returns 404 status
      # 3. traefik "errors-404" middleware requests "custom-errors" service with "/404" path
      # 4. Error page is returned
      middlewares:
        # - name: https-redirect
        - name: errors-404@file
      services:
        - kind: Service
          namespace: traefik
          name: custom-errors
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
