traefik/dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard

spec:
  entryPoints:
    - websecure
  tls:
    secretName: dashboard-tls
  routes:
    - kind: Rule
      match: Host(`traefik.ns.trap.jp`)
      middlewares:
        - name: auth-trap-jp-admin
          namespace: auth
        - name: auth-trap-jp
          namespace: auth
      services:
        - namespace: traefik
          kind: Service
          name: dashboard
          port: dashboard
          scheme: http
          strategy: RoundRobin
          weight: 1
